# luckfox-pico-opencv-mobile-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.sh
1-base_template/: CMakeLists.txt
2-rkmpi_opencv_mobile/: CMakeLists.txt
2-rtsp_opencv_mobile/: .gitignore  CMakeLists.txt
3-rtsp_opencv_mobile_capture/: CMakeLists.txt
4-fb_show/: CMakeLists.txt  main.cpp
cmake/: toolchain-luckfox-pico.cmake
common/: setup.sh
